--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -84,6 +84,10 @@
 
 	.filter_field {
 		width: 65% !important;
+
+		.frappe-control {
+			position: relative;
+		}
 	}
 }
 
